--- a/Exercises/01 Exercise Notebook 1.ipynb
+++ b/Exercises/01 Exercise Notebook 1.ipynb
@@ -26,7 +26,6 @@
     }
    ],
    "source": [
-    "import math\n",
     "import numpy as np\n",
     "\n",
     "xy_data = np.load('Ex1_polyreg_data.npy')\n",
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,8 +128,7 @@
     "    fit = X.dot(beta)                    # fitted values\n",
     "    residuals = y - fit                  # residuals\n",
     "    \n",
-    "    return beta, residuals, fit\n",
-    "    "
+    "    return beta, residuals, fit"
    ]
   },
   {
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -212,8 +210,7 @@
     "plt.ylabel('Y')\n",
     "plt.title('XY data with polynomial fits')\n",
     "plt.legend(fontsize = 'large')\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
