--- a/02 Time series analysis -- capturing periodic components.ipynb
+++ b/02 Time series analysis -- capturing periodic components.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
    "source": [
     "## The combined fit\n",
     "\n",
-    "We have fit a model of the form $f(x) = \\beta_0 + \\beta_1 x + \\beta_2 x^2 + \\beta_s \\sin(\\omega x) + \\beta_c \\cos( \\omega x)$, where $f(x)$ is the predicted CO$_2$ level for date $x$ (expressed in decimal year). The coefficients of the model, which we computed using least squares, are:"
+    "We have fit a model of the form $f(x) = \\beta_0 + \\beta_1 x + \\beta_2 x^2 + \\beta_s \\sin(\\omega x) + \\beta_c \\cos( \\omega x)$, where $f(x)$ is the predicted $CO_2$ level for date $x$ (expressed in decimal year). The coefficients of the model, which we computed using least squares, are:"
    ]
   },
   {
