--- a/03 Model selection [Optional].ipynb
+++ b/03 Model selection [Optional].ipynb
@@ -30,17 +30,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# If you are running this on Google Colab, uncomment and run the following lines; otherwise ignore this cell\n",
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -436,7 +425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -450,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
